force-app/main/default/objects/Stock_Location__c/Stock_Location__c.object-meta.xml
<CustomObject>
    <label>Stock Location</label>
    <nameField>
        <label>Stock Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>