force-app/main/default/objects/Stock_Location__c/fields/Address_Line__c.field-meta.xml
<CustomField>
    <fullName>Address_Line__c</fullName>
    <label>Address Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>