force-app/main/default/objects/Stock_Location__c/fields/City_Municipal__c.field-meta.xml
<CustomField>
    <fullName>City_Municipal__c</fullName>
    <label>City/Municipal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>